# ai-context-tools

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: init.prompt.md
.github/workflows/: upload_to_pypi.yml
aic_tools/: __init__.py  edit_lines.py  marimo_session.py  nb_status.py  notebook.py  pdf.py  runcell.py  widget_snapshot.py
tests/: test_edit_lines.py  test_notebook.py  test_runcell.py  test_widget_snapshot.py
