[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-context-tools"
version = "0.8.4"
description = "AI workflow utilities for the AI Context Standard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "freesemt" }]
keywords = ["ai", "copilot", "jupyter", "notebook", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
# For aic_tools.runcell — execute notebook cells via nbclient.
run = ["nbclient>=0.7", "nbformat>=5.0", "ipykernel>=6.0"]

[project.urls]
Homepage = "https://github.com/freesemt/ai-context-tools"
Repository = "https://github.com/freesemt/ai-context-tools"
Issues = "https://github.com/freesemt/ai-context-tools/issues"

[project.scripts]
aic-notebook = "aic_tools.notebook:main"
aic-runcell = "aic_tools.runcell:main"

[tool.hatch.version]
path = "aic_tools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aic_tools"]
