[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-context-tools"
version = "0.9.0"
description = "AI workflow utilities for the AI Context Standard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "freesemt" }]
keywords = ["ai", "copilot", "jupyter", "notebook", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
# For aic_tools.runcell - Execute notebook cells via nbclient.
run = ["nbclient>=0.7", "nbformat>=5.0", "ipykernel>=6.0"]

# For aic_tools.pdf - Extract text from PDF files.
# Recommended: pymupdf (best for Japanese/scanned PDFs)
# Fallback: pypdf (sufficient for English PDFs)
pdf = ["pymupdf>=1.24.0", "pypdf>=3.0"]
[project.urls]
Homepage = "https://github.com/freesemt/ai-context-tools"
Repository = "https://github.com/freesemt/ai-context-tools"
Issues = "https://github.com/freesemt/ai-context-tools/issues"

[project.scripts]
aic-notebook = "aic_tools.notebook:main"
aic-nb-status = "aic_tools.nb_status:main"
aic-runcell = "aic_tools.runcell:main"
aic-widget-snapshot = "aic_tools.widget_snapshot:main"
aic-marimo-session = "aic_tools.marimo_session:main"
aic-edit-lines = "aic_tools.edit_lines:main"
aic-pdf = "aic_tools.pdf:main"

[tool.hatch.version]
path = "aic_tools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aic_tools"]
